--- a/src/pages/css/draw.css
+++ b/src/pages/css/draw.css
@@ -8,8 +8,12 @@
     flex-direction: column;
     /* // */
     padding: 2rem;
+    background-image: url(./img/bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: cover;
+    position: relative;
 }
-
 
 .draw-contents {
     display: flex;
@@ -31,6 +35,21 @@
 
 .draw-wrapper {
     width: 480px;
+    margin-top: 10rem;
+    position: relative;
+    z-index: 1;
+}
+
+
+
+@media screen and (orientation: landscape) and (max-height: 900px) {
+  .draw {
+    justify-content: flex-start;
+  }
+
+  .draw-wrapper {
+    margin-top: 330px;
+  }
 }
 
 .shipping-form {
@@ -42,6 +61,21 @@
     font-family: 'Paperlogy-8ExtraBold';
     margin: 1rem 0 0;
     color: #ffffff;
+}
+
+.draw h1.logo {
+    text-indent: -99999px;
+    overflow: hidden;
+    width: 600px;
+    height: 281px;
+    background-image: url(./img/logo.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    position: absolute;
+    top: 40px;
+    left: 50%;
+    margin-left: -300px;
 }
 
 .draw p {
@@ -65,6 +99,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    border: 3px solid #ffacc9;
+    border-radius: 100px;
 }
 
 .draw-count-control input {
@@ -75,7 +111,7 @@
     min-width: 4rem !important;
     padding: 0 !important;
     border: 0 !important;
-    background-color: #f5f7f9 !important;
+    background-color: #ffffff !important;
 }
 
 .draw-count-control button {
@@ -86,8 +122,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #f5f7f9;
-    border-color: #f5f7f9;
+    background-color: #ffffff;
+    border-color: #ffffff;
     border: 0;
 }
 
@@ -118,6 +154,7 @@
     border: 0 !important;
     width: 100%;
     color: #ffffff;
+    background-color: #ffacc9;
     margin: 0 auto;
 }
 
@@ -202,7 +239,6 @@
     height: 3rem !important;
     padding: 0 !important;
     border: 0 !important;
-    background-color: #f5f7f9 !important;
     min-width: 120px;
     display: flex;
     align-items: center;
@@ -221,6 +257,7 @@
 .draw-contents .draw-result+ul li {
     width: 100%;
     margin-bottom: 1rem;
+    background-color: #f5f7f9 !important;
 }
 
 .draw-contents .draw-result+ul li:last-child {
@@ -309,7 +346,7 @@
 
 .pulse span {
     animation: pulseOpacity 1s infinite;
-    color: #ffffff;
+    color: #ffacc9;
 }
 
 .copy {
@@ -469,3 +506,33 @@ button.btn-capture:disabled {
     animation: none !important;
     opacity: 1 !important;
 }
+
+.cr {
+    position: absolute;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    zoom: 0.5;
+    z-index: 2;
+}
+
+.c1 {
+    width: 121px;
+    height: 136px;
+    background-image: url(./img/c1.png);
+    left: 50%;
+    top: 50%;
+    margin-left: 400px;
+    margin-top: -80px;
+}
+
+.c2 {
+    width: 169px;
+    height: 169px;
+    background-image: url(./img/c2.png);
+    right: 50%;
+    top: 50%;
+    margin-right: 400px;
+    margin-top: 80px;
+}
+
